chore: Update .gitignore to include Manual folder and files

--- a/Proyecto-lector-huella/.gitignore
+++ b/Proyecto-lector-huella/.gitignore
@@ -11,9 +11,8 @@ node_modules/
 public/
 .gitignore
 
-../Manual/
-../Manual/Lector_Huellas.pages
-../Manual/Lector_Huellas.pdf
+../Manual/*
+
 
 
 
